# terracotta

./: CHANGELOG.md  Cargo.toml  Config.example.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: developer.md  examples.md  integration.md
examples/api/: Config.example.toml  config.rs  handlers.rs  main.rs  routes.rs  state.rs
examples/full/: Config.example.toml  auth.rs  config.rs  handlers.rs  main.rs  routes.rs  state.rs  utility.rs
examples/minimal/: Config.example.toml  config.rs  handlers.rs  main.rs  routes.rs  state.rs  utility.rs
examples/resources/html/: layout.tera.html  login.tera.html
examples/resources/static/css/: styles.css
html/: index.tera.html  layout.tera.html  login.tera.html
src/: app.rs  assets.rs  auth.rs  config.rs  core.rs  errors.rs  handlers.rs  health.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs  stats.rs  utility.rs
src/app/: config.rs  create.rs  errors.rs  init.rs  routing.rs  state.rs  utility.rs
src/assets/: config.rs  errors.rs  handlers.rs  state.rs
src/auth/: errors.rs  handlers.rs  middleware.rs  requests.rs  routing.rs  state.rs  utility.rs
src/errors/: errors.rs  middleware.rs  routing.rs
src/handlers/: assets.rs  auth.rs  health.rs  stats.rs
src/health/: handlers.rs  responses.rs
src/health/tests/: handlers.rs
src/middleware/: auth.rs  errors.rs  stats.rs
src/stats/: config.rs  handlers.rs  middleware.rs  requests.rs  responses.rs  routing.rs  state.rs  utility.rs  worker.rs
src/stats/tests/: handlers.rs
src/tests/: health.rs  stats.rs
src/tests/handlers/: stats.rs
src/tests/middleware/: stats.rs
src/tests/stats/: handlers.rs
static/css/: styles.css
