[package]
name = "terracotta"
version = "0.3.0"
description = "Boilerplate webserver application based on Axum"
categories = ["asynchronous", "authentication", "rust-patterns", "web-programming", "web-programming::http-server"]
keywords = ["web", "server", "boilerplate", "example", "authentication"]
edition = "2021"
license = "MIT"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/danwilliams/terracotta"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["std", "alloc", "clock", "serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
flume = { version = "0.11.0", features = ["async"] }
include_dir = { version = "0.7.4", features = ["glob"] }
indexmap = { version = "2.5.0", features = ["serde"] }
itertools = "0.13.0"
mime_guess = "2.0.5"
parking_lot = "0.12.3"
rubedo = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
smart-default = "0.7.1"
tera = "1.20.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
tikv-jemallocator = "0.6.0"
tokio = { version = "1.40.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["io", "io-util"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "trace"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "preserve_order", "indexmap"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
velcro = "0.5.4"

[dev-dependencies]
assert-json-diff = "2.0.2"
